src/test/ui/type-alias-impl-trait/declared_but_never_defined.full_tait.stderr
warning: the feature `type_alias_impl_trait` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/declared_but_never_defined.rs:3:32
   |
LL | #![cfg_attr(full_tait, feature(type_alias_impl_trait))]
   |                                ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #63063 <https://github.com/rust-lang/rust/issues/63063> for more information

error: could not find defining uses
  --> $DIR/declared_but_never_defined.rs:9:12
   |
LL | type Bar = impl std::fmt::Debug;
   |            ^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error; 1 warning emitted

